2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/14_asmBody.deca
// Description:
//    Programme : utilisation de asm avec la methode sans params
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 16/01/2024
class A {
    protected int x;
    void get() asm (
        "hello ' world"
    );
}